<resources>
    <string name="app_name">Shikimori App</string>
    <string name="appBarFixScrollingFooterBehavior">com.gnoemes.shikimoriapp.utils.view.FixScrollingFooterBehavior</string>
    <string name="common_favorite">Избранное</string>
    <string name="common_calendar">Календарь</string>
    <string name="common_search">Поиск</string>
    <string name="common_main">Главная</string>
    <string name="common_menu">Меню</string>
    <string name="common_today">Сегодня</string>
    <string name="common_tomorrow">Завтра</string>
    <string name="common_genre">Жанр</string>
    <string name="common_type">Тип</string>
    <string name="common_status">Статус</string>
    <string name="common_season">Сезон</string>
    <string name="common_year">Год</string>
    <string name="common_order_by">Упорядочить по</string>
    <string name="common_duration">Продолжительность</string>
    <string name="common_franchise">Франшиза</string>
    <string name="common_studio">Студия</string>
    <string name="common_loading">Загрузка</string>
    <string name="common_error_message">Похоже, что у Вас отсуствует интернет-соединение или произошла ошибка.\n Потяните, что бы обновить</string>
    <string name="common_error_message_without_pull">Похоже, что у Вас отсуствует интернет-соединение или произошла ошибка.</string>
    <string name="common_description">Описание</string>
    <string name="common_cancel">Отмена</string>
    <string name="common_next">Далее</string>
    <string name="common_links">Ссылки</string>
    <string name="common_similar">Похожие</string>
    <string name="common_comments">Комментарии</string>
    <string name="common_translations">Переводы</string>
    <string name="common_guest">Гость</string>
    <string name="common_notifications">Оповещения</string>
    <string name="common_friends">Друзья</string>
    <string name="common_news">Новости</string>
    <string name="common_messages">Сообщения</string>
    <string name="common_settings">Настройки</string>
    <string name="search_nothing">Ничего не найдено.\n Попробуйте поискать что-нибудь другое</string>
    <string name="episode_nothing">Ничего не найдено.\n Похоже, что серии еще не появились на сайте</string>
    <string name="calendar_nothing">Ничего не найдено.\n Добавляйте аниме в списки для отслеживания выхода новых серий</string>
    <string name="search_advance">Продвинутый</string>
    <string name="calendar_ongoings">Онгоинги</string>
    <string name="calendar_date_format" translatable="false">%s, %s</string>
    <string name="calendar_episodes_format">\n[%s из %s]</string>
    <string name="calendar_volumes_format">\n[%s-%s]</string>
    <string name="calendar_episode_in">%s эпизод</string>
    <string name="menu_guest_hint">Авторизоваться</string>
    <string name="menu_user_hint">Перейти в профиль</string>
    <string name="main_exit_message">Для выхода из программы нажмите кнопку еще раз</string>
    <string name="series_settings">Настройки просмотра</string>
    <string name="series_title">Выбор серии</string>
    <string name="translations_empty">Не найдено подходящих переводов. \n Попробуйте изменить тип перевода</string>
    <string name="error_internet">Internet error</string>
    <string name="error_timeout">Connection timeout</string>
    <string name="error_json">Json syntax error</string>
    <string name="error_unknown">Unknown Error</string>
    <string name="error_no_data">Нет данных</string>
    <string name="error_unprocessable">Произошла ошибка во время получения данных.</string>
    <string name="description_image">Изображение</string>
    <string name="description_progress">progress</string>
    <string name="description_clear">Сброс фильтров</string>
    <string name="description_accept">Принять</string>
    <string name="type_tv" translatable="false">TV</string>
    <string name="type_tv_13" translatable="false">TV 13</string>
    <string name="type_tv_24" translatable="false">TV 24</string>
    <string name="type_tv_48" translatable="false">TV 48</string>
    <string name="type_movie" translatable="false">Movie</string>
    <string name="type_ova" translatable="false">OVA</string>
    <string name="type_ona" translatable="false">ONA</string>
    <string name="type_special" translatable="false">Special</string>
    <string name="type_music" translatable="false">Music</string>
    <string name="type_pattern">%s (%s эп.), %o мин.</string>
    <string name="type_pattern_simple">%s (%s эп.).</string>
    <string name="type_tv_translatable">TV сериал</string>
    <string name="type_movie_translatable">Фильм</string>
    <string name="type_special_translatable">Спешл</string>
    <string name="type_music_translatable">Музыка</string>
    <string-array name="anime_types">
        <item>@string/type_tv</item>
        <item>@string/type_ova</item>
        <item>@string/type_ona</item>
        <item>@string/type_special</item>
        <item>@string/type_movie</item>
        <item>@string/type_music</item>
        <item>@string/type_tv_13</item>
        <item>@string/type_tv_24</item>
        <item>@string/type_tv_48</item>
    </string-array>
    <string-array name="anime_types_name">
        <item>tv</item>
        <item>ova</item>
        <item>ona</item>
        <item>special</item>
        <item>movie</item>
        <item>music</item>
        <item>tv_13</item>
        <item>tv_24</item>
        <item>tv_48</item>
    </string-array>
    <string-array name="manga_types">
        <item>@string/type_manga_translatable</item>
        <item>@string/type_manhwa_translatable</item>
        <item>@string/type_manhua_translatable</item>
        <item>@string/type_one_shot_translatable</item>
        <item>@string/type_doujin_translatable</item>
    </string-array>
    <string-array name="manga_types_name">
        <item>manga</item>
        <item>manhwa</item>
        <item>manhua</item>
        <item>one_shot</item>
        <item>doujin</item>
    </string-array>
    <string name="status_anons">Анонс</string>
    <string name="status_ongoing">Онгоинг</string>
    <string name="status_released">Завершен</string>
    <string-array name="statuses">
        <item>@string/status_anons</item>
        <item>@string/status_ongoing</item>
        <item>@string/status_released</item>
    </string-array>
    <string-array name="statuses_names">
        <item>anons</item>
        <item>ongoing</item>
        <item>released</item>
    </string-array>
    <string name="season_autumn">Осень</string>
    <string name="season_winter">Зима</string>
    <string name="season_spring">Весна</string>
    <string name="season_summer">Лето</string>
    <string-array name="seasons">
        <item>@string/season_autumn</item>
        <item>@string/season_winter</item>
        <item>@string/season_spring</item>
        <item>@string/season_summer</item>
    </string-array>
    <string-array name="seasons_names">
        <item>fall</item>
        <item>winter</item>
        <item>spring</item>
        <item>summer</item>
    </string-array>
    <string name="order_by_id">По порядку</string>
    <string name="order_by_type">По типу</string>
    <string name="order_by_popularity">По популярности</string>
    <string name="order_by_ranked">По рейтингу</string>
    <string name="order_by_name">По имени</string>
    <string name="order_by_aired_on">По дате</string>
    <string name="order_by_episodes">По эпизодам</string>
    <string name="order_by_status">По статусу</string>
    <string name="order_by_random">Рандом</string>
    <string name="order_by_volumes">По томам</string>
    <string name="order_by_chapters">По главам</string>
    <string-array name="anime_order">
        <item>@string/order_by_name</item>
        <item>@string/order_by_aired_on</item>
        <item>@string/order_by_type</item>
        <item>@string/order_by_id</item>
        <item>@string/order_by_status</item>
        <item>@string/order_by_random</item>
        <item>@string/order_by_episodes</item>
        <item>@string/order_by_ranked</item>
        <item>@string/order_by_popularity</item>
    </string-array>
    <string-array name="anime_order_names">
        <item>name</item>
        <item>aired_on</item>
        <item>type</item>
        <item>id</item>
        <item>status</item>
        <item>random</item>
        <item>episodes</item>
        <item>popularity</item>
    </string-array>
    <string-array name="manga_order">
        <item>@string/order_by_name</item>
        <item>@string/order_by_aired_on</item>
        <item>@string/order_by_id</item>
        <item>@string/order_by_status</item>
        <item>@string/order_by_random</item>
        <item>@string/order_by_volumes</item>
        <item>@string/order_by_chapters</item>
        <item>@string/order_by_ranked</item>
        <item>@string/order_by_popularity</item>
    </string-array>
    <string name="duration_small">&lt; 10 мин.</string>
    <string name="duration_medium">&lt; 30 мин.</string>
    <string name="duration_long">&gt; 30 мин.</string>
    <string name="watch_online">Смотреть онлайн</string>
    <string name="description_watched">Просмотрено</string>
    <string name="watch_continue">Продолжить</string>
    <string name="watch_now">Начать просмотр</string>
    <string name="manual_choice">Ручной выбор</string>
    <string name="translation_voice">Озвучка</string>
    <string name="translation_sub">Субтитры</string>
    <string name="translation_raw">Оригинал</string>
    <string name="ru">RU</string>
    <string name="jp">JP</string>
    <string name="en">EN</string>
    <string name="translation_auto">Автоматический</string>
    <string name="translation_manual">В ручную</string>
    <string name="translation_dubber_choose">Выбор даббера:</string>
    <string name="player_in_browser">Веб-плеер</string>
    <string name="player_external">Внешний</string>
    <string name="player_embedded">Внутренний (BETA)</string>
    <string name="player_choose">Выбор плеера:</string>
    <string name="open_browser">Открыть в браузере</string>
    <string name="quality_tv" translatable="false">TV</string>
    <string name="quality_dvd" translatable="false">DVD</string>
    <string name="quality_bd" translatable="false">BD</string>
    <string name="translation_settings">Настройки переводов</string>
    <string name="translation_find_all">Искать все</string>
    <string name="common_sign_in">Вход</string>
    <string name="common_enter">Войти</string>
    <string name="auth_dialog_conent">Войдите или зарегистрируйтесь для использования всех возможностей приложения</string>
    <string name="common_sign_up">Регистрация</string>
    <string name="reg_nickname">Никнейм</string>
    <string name="similar_empty">Ничего не найдено. \n Возможно Вам стоит пересмотреть свои вкусы ;)</string>
    <string name="description_avatar">Аватар</string>
    <string name="description_answer">Ответить</string>
    <string name="comment_summary">Отзыв</string>
    <string name="common_yesterday">Вчера</string>
    <string name="comments_nothing">Комментарии не найдены</string>
    <string name="comment_quote">Цитата:</string>
    <string name="common_episodes">Эпизоды:</string>
    <string name="common_rate">Оценка:</string>
    <string name="common_chapters">Главы:</string>
    <string name="rate_episodes_format" translatable="false">%s / %s (%s)</string>
    <string name="rate_empty">Здесь пока ничего нет</string>
    <string name="rate_watching">Смотрю</string>
    <string name="rate_reading">Читаю</string>
    <string name="rate_rereading">Перечитываю</string>
    <string name="rate_readed">Прочитано</string>
    <string name="rate_planned">Запланировано</string>
    <string name="rate_comment_title">Комментарий:</string>
    <string name="rate_status">Статус:</string>
    <string name="rate_comment_hint">Оставьте ваши впечатления здесь</string>
    <string name="common_reset">Сброс</string>
    <string name="common_apply">Применить</string>
</resources>