<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/text_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/player_choose"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:divider="?android:attr/dividerHorizontal"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_info">

        <RadioButton
            android:id="@+id/btn_embedded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:paddingBottom="@dimen/margin_normal"
            android:paddingEnd="20dp"
            android:paddingLeft="20sp"
            android:paddingRight="20dp"
            android:paddingStart="20sp"
            android:clickable="false"
            android:focusable="false"
            android:paddingTop="@dimen/margin_normal"
            android:text="@string/player_embedded"
            android:textColor="?attr/colorText"
            android:textSize="18sp"
            tools:drawableEnd="@drawable/ic_check"
            tools:drawableTint="@color/light_teal" />

        <RadioButton
            android:id="@+id/btn_external"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:paddingBottom="@dimen/margin_normal"
            android:paddingEnd="20dp"
            android:paddingLeft="20sp"
            android:paddingRight="20dp"
            android:paddingStart="20sp"
            android:clickable="false"
            android:focusable="false"
            android:paddingTop="@dimen/margin_normal"
            android:text="@string/player_external"
            android:textColor="?attr/colorText"
            android:textSize="18sp"
            tools:drawableEnd="@drawable/ic_check"
            tools:drawableTint="@color/light_teal" />

        <RadioButton
            android:id="@+id/btn_browser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:paddingBottom="@dimen/margin_normal"
            android:paddingEnd="20dp"
            android:paddingLeft="20sp"
            android:paddingRight="20dp"
            android:paddingStart="20sp"
            android:paddingTop="@dimen/margin_normal"
            android:text="@string/player_in_browser"
            android:textColor="?attr/colorText"
            android:textSize="18sp"
            tools:drawableEnd="@drawable/ic_check"
            tools:drawableTint="@color/light_teal" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>